{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 130,
  "lineage": "878bad5d-fb61-cf88-e4f5-98ee727df5ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm_docker_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0756fbca465a59a30",
            "arn": "arn:aws:ec2:us-east-1:870030744367:instance/i-03f7b31d238938f4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03f7b31d238938f4c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a333aa33fbc1404e",
            "private_dns": "ip-10-0-1-193.ec2.internal",
            "private_ip": "10.0.1.193",
            "public_ip": "18.207.229.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-092576934847b1eea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4220bd35f5772d1",
            "tags": {
              "Name": "VladimirMarchuk/master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044689bab00c59787"
            ]
          },
          "depends_on": [
            "aws_security_group.vm_docker_swarm_SG",
            "aws_subnet.vm_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm_docker_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0756fbca465a59a30",
            "arn": "arn:aws:ec2:us-east-1:870030744367:instance/i-005f469a9107dd63a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-005f469a9107dd63a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "monitoring": false,
            "primary_network_interface_id": "eni-06c1b77f9d6e703ed",
            "private_dns": "ip-10-0-1-117.ec2.internal",
            "private_ip": "10.0.1.117",
            "public_ip": "3.81.96.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0a4ced815b941177b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4220bd35f5772d1",
            "tags": {
              "Name": "VladimirMarchuk/worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044689bab00c59787"
            ]
          },
          "depends_on": [
            "aws_security_group.vm_docker_swarm_SG",
            "aws_subnet.vm_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vm_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-047d53c0adb77ffbb",
            "owner_id": "870030744367",
            "tags": {
              "Name": "VladimirMarchuk/gateway"
            },
            "vpc_id": "vpc-0cd8f1d00a339fb2a"
          },
          "depends_on": [
            "aws_vpc.vm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vm_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02ab058d7550cbf97",
            "owner_id": "870030744367",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047d53c0adb77ffbb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VladimirMarchuk/RT"
            },
            "vpc_id": "vpc-0cd8f1d00a339fb2a"
          },
          "depends_on": [
            "aws_internet_gateway.vm_gw",
            "aws_vpc.vm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vm_rt_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ec6e7b2abf4a1a6",
            "route_table_id": "rtb-02ab058d7550cbf97",
            "subnet_id": "subnet-0f4220bd35f5772d1"
          },
          "depends_on": [
            "aws_route_table.vm_rt",
            "aws_subnet.vm_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vm_docker_swarm_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870030744367:security-group/sg-044689bab00c59787",
            "description": "Security group for docker swarm cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-044689bab00c59787",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "vm_docker_swarm_SG",
            "name_prefix": null,
            "owner_id": "870030744367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VM_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd8f1d00a339fb2a"
          },
          "depends_on": [
            "aws_vpc.vm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vm_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870030744367:subnet/subnet-0f4220bd35f5772d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f4220bd35f5772d1",
            "map_public_ip_on_launch": false,
            "owner_id": "870030744367",
            "tags": {
              "Name": "VladimirMarchuk/subnet"
            },
            "vpc_id": "vpc-0cd8f1d00a339fb2a"
          },
          "depends_on": [
            "aws_vpc.vm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vm_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870030744367:vpc/vpc-0cd8f1d00a339fb2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e9493ee974d389df",
            "default_route_table_id": "rtb-048af1b0bae56a9ea",
            "default_security_group_id": "sg-03f05a03b0890b066",
            "dhcp_options_id": "dopt-5ad24021",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cd8f1d00a339fb2a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-048af1b0bae56a9ea",
            "owner_id": "870030744367",
            "tags": {
              "Name": "vm_vpc"
            }
          }
        }
      ]
    }
  ]
}